--- a/landing/section-download/index.sass
+++ b/landing/section-download/index.sass
@@ -64,6 +64,10 @@
     justify-content: center
     height: 100%
     width: 334px
+    padding-top: 58px
+    box-sizing: border-box
+    gap: 16px
+
     @media (max-width: 1160px)
         display: none
 
@@ -72,3 +76,4 @@
         font-size: 18px
         line-height: 25px
         color: #2C3034
+        margin: 0
