--- a/landing/section-main/index.sass
+++ b/landing/section-main/index.sass
@@ -164,10 +164,13 @@
 			line-height: 62px
 
 		@media (max-width: 768px)
+			font-size: 64px
+			line-height: 84px
 			text-align: center
 			color: #fff
 			width: 402px
 			margin: auto
+			margin-top: 16px
 
 	@media (max-width: 768px)
 		background-color: transparent
@@ -195,6 +198,9 @@
 
 		@media (max-width: 920px)
 			width: 130px
+
+		@media (max-width: 768px)
+			width: 200px
 
 	@media (max-width: 768px)
 		margin-top: 110px
@@ -254,3 +260,6 @@
 	@media (max-width: 768px)
 		background: transparent
 		margin-top: 100px
+		padding: 0
+		margin-bottom: -32px
+		height: fit-content
