--- a/landing/index.pug
+++ b/landing/index.pug
@@ -23,4 +23,6 @@ html(lang="en")
             include section-partners/index.pug
 
         include footer/index.pug
-        script(src="./index.js")
+        include waitlist-modal/index.pug
+
+        script(type="module", src="./index.js")
