--- a/landing/section-security/index.pug
+++ b/landing/section-security/index.pug
@@ -15,6 +15,6 @@ section.secure
 
             a.secure-banner-link(href=security.moreLink)
                 | #{security.moreLocale}
-                img(src='/assets/icons/white.link.arrow.svg')
+                img(src='/assets/icons/link-arrow.svg')
         
         img.secure-banner-picture(src='/assets/secure.png' alt='secure-banner')
