--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -49,6 +49,7 @@ section
 
 		@media (max-width: 580px)
 			font-size: 32px
+			line-height: 40px
 			width: 100%
 
 .here-button.light
@@ -73,7 +74,7 @@ section
 	box-shadow: 4px 4px 0px #2c3034
 	border-radius: 16px
 
-	font-weight: 700
+	font-weight: 800
 	font-size: 16px
 	line-height: 22px
 	text-align: center
