--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -33,3 +33,6 @@ header.header
 .float-qr
   img(src=floatqr.qrcode)
   p= floatqr.qrcodeLocale
+
+.scroll-up
+  img(src="/assets/icons/arrow.up.svg")
