--- a/landing/section-comparison/index.sass
+++ b/landing/section-comparison/index.sass
@@ -49,6 +49,19 @@
         @media (max-width: 1160px)
             background: transparent
 
+    &-right
+        background: #ebdedc
+        border-top-right-radius: 28px
+        border-bottom-right-radius: 28px
+        @media (max-width: 820px)
+            background: transparent
+
+    &-right &-column
+        background: #2C3034
+        &:last-child
+            border-bottom-left-radius: 28px
+            border-bottom-right-radius: 28px
+
     &-header
         height: 91px
         width: 100%
@@ -98,10 +111,6 @@
             width: 193px
             @media (max-width: 1160px)
                 width: 120px
-
-    &-right
-        background: #2C3034
-        border-radius: 28px
 
     &-right .comparison-column-key
         color: rgba(243, 235, 234, 0.6)
