--- a/landing/section-security/index.sass
+++ b/landing/section-security/index.sass
@@ -19,12 +19,19 @@
         gap: 26px
         margin-top: 36px
 
+    &-socials a
+        transition: 0.3s opacity
+    
+    &-socials a:hover
+        opacity: 0.7
+
     &-socials a img
         width: 40px
         height: 40px
 
     &-picture
         width: 419px
+        transition: 1s transform
         object-fit: contain
         margin-right: 40px
         margin-top: 80px
@@ -38,6 +45,13 @@
     
         @media (max-width: 700px)
             margin: auto
+
+    &:hover &-picture
+        transform: scale(1.1) translateX(-16px)
+		
+    @media (max-width: 768px)
+        &:hover &-picture
+            transform: scale(1.1) translateX(-4px)
 
     &-content
         width: 50%
@@ -67,20 +81,34 @@
             line-height: 22px
 
     &-link
-        font-weight: 500
-        font-size: 20px
-        line-height: 27px
-        color: #F3EBEA
+        font-family: 'Manrope'
+        font-style: normal
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px
+        color: #FD84E3
+        trasnsition: 0.2s background
+        padding: 4px 12px
+        margin: -4px -12px
+        width: fit-content
+        text-decoration: none
+    
         margin-top: 107px
         align-items: center
         display: flex
 
+        &:hover
+            background: rgba(255, 255, 255, 0.1)
+            border-radius: 12px
+            img
+                transform: translateX(4px)
+
         @media (max-width: 1160px)
-            font-weight: 700
+            font-weight: 800
             font-size: 16px
             line-height: 22px
             margin-top: 56px
 
-
     &-link img
         margin-left: 16px
+        transition: 0.2s transform
