--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -2,10 +2,8 @@ header.header
   .header-center
     img.header-logo(src='/assets/logo.svg' alt='logo')
     .header-links
-      a.header-link.active Home
-      a.header-link How to use
-      a.header-link NFT
-      a.header-link Play to learn
+      for item in header.links
+        a.header-link(href=item.link)= item.text
 
     .header-waitlist.waitlist-button
       a Android waiting list
@@ -14,11 +12,9 @@ header.header
 
   .header-body 
     .header-mobile-links
-      a.header-link.active Home
-      a.header-link How to use
-      a.header-link NFT
-      a.header-link Play to learn
-
+      for item in header.links
+        a.header-link(href=item.link)= item.text
+      
     .header-form
       p.header-form-title
         | Android waiting list
