--- a/landing/footer/index.sass
+++ b/landing/footer/index.sass
@@ -35,3 +35,8 @@
         display: flex
         gap: 16px
         margin: 26px 0 42px
+
+    & a
+        transition: 0.2s opacity
+        &:hover
+            opacity: 0.8
