--- a/landing/header/index.sass
+++ b/landing/header/index.sass
@@ -23,13 +23,16 @@
 
     &-link
         width: fit-content
-        font-weight: 800
+        font-weight: 600
         font-size: 16px
         line-height: 22px
         color: #F3EBEA
         padding: 4px 0
         cursor: pointer
         text-decoration: none
+        transition: 0.2s opacity
+        &:hover
+            opacity: 0.8
         
         &:first-child 
             color: rgba(247, 179, 2, 1)
@@ -37,7 +40,7 @@
 
     &-waitlist
         cursor: pointer
-        font-weight: 800
+        font-weight: 600
         font-size: 16px
         line-height: 22px
         color: #F3EBEA
@@ -157,7 +160,7 @@
 
     &-form-title
         margin: 0
-        font-weight: 800
+        font-weight: 700
         font-size: 16px
         line-height: 22px
         color: #F3EBEA
