--- a/landing/section-comparison/index.pug
+++ b/landing/section-comparison/index.pug
@@ -1,7 +1,7 @@
 section.comparison
     h2 
         | WEB 2.0
-        img(src="./section-comparison/arrow.right.svg") 
+        img(src="/assets/icons/arrow.right.svg") 
         span WEB 3.0
         
     .comparison-table
@@ -12,7 +12,7 @@ section.comparison
 
         .comparison-left
             .comparison-header
-                img(src='/assets/venmo.png')
+                img(src='/assets/Socials/venmo.png')
 
             for item in comparison 
                 .comparison-column
