--- a/landing/section-download/index.pug
+++ b/landing/section-download/index.pug
@@ -9,14 +9,14 @@ section.download
             
             .download-banner-links
                 a.here-button.here-button-orange(href=download.ios)
-                    img(src='/assets/icons/apple.svg')
+                    img(src='/assets/Socials/apple.svg')
                     | App Store
 
-                a.here-button.pink.waitlist-button(href=download.android) 
+                button.here-button.pink.waitlist-button
                     | Android waitlist
             
-        img(src='/assets/screens.png')
+        img(src=download.picture)
         .download-banner-qr
-            img(src='./section-download/assets/qrcode.svg')
-            img(src='./section-download/assets/arrow.svg')
+            img(src=download.qrcode)
+            img(src='/assets/icons/arrow.up.black.svg')
             p= download.scanLocale
