--- a/landing/section-main/index.pug
+++ b/landing/section-main/index.pug
@@ -9,7 +9,7 @@ main.main
       img(src='/assets/icons/arrow.left.svg')
       p= main.qrcodeLocale
     .main-near
-      img(src='/assets/icons/near-simple.svg')
+      img(src='/assets/Socials/near-small.svg')
       p= main.poweredbynear
     .main-stub
     .main-bottom
@@ -20,10 +20,10 @@ main.main
 main.main-mobile
   h1 !{main.title}
   .main-mobile-near
-    img(src='/assets/icons/near-simple.light.svg')
+    img(src='/assets/Socials/near-small.light.svg')
     p= main.poweredbynear
 
   a.here-button.pink.light(href=common.appStore)
     | Download HERE
   
-  img(src="./section-main/assets/arrow.svg", alt="arrow")
+  img(src="/assets/icons/arrow.down.white.svg", alt="arrow")
