--- a/landing/section-main/index.sass
+++ b/landing/section-main/index.sass
@@ -31,9 +31,10 @@
 	align-items: center
 	justify-content: center
 	margin-top: 16px
+	gap: 8px
 
 	& p
-		font-weight: 800
+		font-weight: 700
 		font-size: 16px
 		line-height: 22px
 		color: #F3EBEA
@@ -185,7 +186,7 @@
 	gap: 24px
 
 	p
-		font-weight: 800
+		font-weight: 600
 		font-size: 16px
 		line-height: 22px
 		color: #F3EBEA
@@ -218,7 +219,7 @@
 	gap: 8px
 
 	p
-		font-weight: 800
+		font-weight: 700
 		font-size: 16px
 		line-height: 22px
 		color: #2C3034
@@ -245,7 +246,7 @@
 	height: 128px
 
 	p
-		font-weight: 800
+		font-weight: 700
 		font-size: 32px
 		line-height: 40px
 		font-feature-settings: 'liga' off
