--- a/landing/section-partners/index.pug
+++ b/landing/section-partners/index.pug
@@ -4,20 +4,38 @@ section.partners
         span.dot .
     .partners-group.partners-nft
         p NFT
-        img(src='/assets/partners/paras.svg')
-        img(src='/assets/partners/nearstarter.png')
-        img(src='/assets/partners/mintbase.png')
-        img(src='/assets/partners/a24.png')
+        a(href="https://paras.id")
+            img(src='/assets/Partners/paras.svg', width="140px", height="33px")
+
+        a(href="https://nearstarter.fi/")
+            img(src='/assets/Partners/nearstarter.svg', style="margin-top: 8px", width="303px", height="29px")
+     
+        a(href="https://www.mintbase.io/")
+            img(src='/assets/Partners/mintbase.svg', width="187px", height="49px")
+        
+        a(href="https://apollo42.world")
+            img(src='/assets/Partners/a24.svg', width="254px", height="50px")
+
     .partners-group.partners-finance
         p Finance
-        img(src='/assets/partners/pemb.png')
-        img(src='/assets/partners/burrow.png')
-        img(src='/assets/partners/nearpay.png')
-        img(src='/assets/partners/astrostakers.png')
-    .partners-group.partners-dex
-        p DEX
-        img(src='/assets/partners/tonic.png')
-        img(src='/assets/partners/spin.png')
-    .partners-group.partners-other
-        p Other
-        img(src='/assets/partners/learnnear.png')
+        a(href="https://pembrock.finance/")
+            img(src='/assets/Partners/pembrock.svg', width="242px", height="65px")
+        a(href="https://app.burrow.cash/")
+            img(src='/assets/Partners/burrow.svg', style="margin-bottom: 5px", width="176px", height="47px")
+        a(href="https://www.nearpay.io/")
+            img(src='/assets/Partners/nearpay.svg', width="161px", height="30px")
+        a(href="https://astrostakers.com/")
+            img(src='/assets/Partners/astrostakers.svg', style="margin-bottom: 6px", width="238px", height="27px")
+
+    .partners-wrap
+        .partners-group.partners-dex
+            p DEX
+            a(href="https://tonic.foundation/")
+                img(src='/assets/Partners/tonic.svg', width="181px", height="57px")
+            a(href="https://spin.fi/")
+                img(src='/assets/Partners/spin.svg', width="187px", height="52px")
+        
+        .partners-group.partners-other
+            p Other
+            a(href="https://learnnear.club/")
+                img(src='/assets/Partners/LNC.svg', width="360px", height="72px")
