--- a/landing/section-security/index.pug
+++ b/landing/section-security/index.pug
@@ -17,4 +17,4 @@ section.secure
                 | #{security.moreLocale}
                 img(src='/assets/icons/link-arrow.svg')
         
-        img.secure-banner-picture(src='/assets/secure.png' alt='secure-banner')
+        img.secure-banner-picture(src='/assets/Graphics/secure.png' alt='secure-banner')
