--- a/landing/section-asks/index.sass
+++ b/landing/section-asks/index.sass
@@ -5,7 +5,7 @@
     width: 100%
     cursor: pointer
     overflow: hidden
-    transition: 0.2s height
+    transition: 0.2s height, 0.2s background
 
     &+&
         margin-top: 12px
@@ -20,7 +20,7 @@
         display: flex
         align-items: center
         justify-content: space-between
-        padding: 24px
+        padding: 32px 24px
         gap: 16px
 
     &-header p
