--- a/landing/section-comparison/index.sass
+++ b/landing/section-comparison/index.sass
@@ -53,9 +53,16 @@
         background: #ebdedc
         border-top-right-radius: 28px
         border-bottom-right-radius: 28px
-        @media (max-width: 820px)
-            background: transparent
+        @media (max-width: 1160px)
+            background: #F3EBEA
 
+    &-left
+        background: #ebdedc
+        border-top-left-radius: 28px
+        border-bottom-left-radius: 28px
+        @media (max-width: 1160px)
+            background: #F3EBEA
+            
     &-right &-column
         background: #2C3034
         &:last-child
