--- a/landing/section-comparison/index.pug
+++ b/landing/section-comparison/index.pug
@@ -33,7 +33,7 @@ section.comparison
         .comparison-right
             .comparison-header
                 .comparison-header-badge
-                    img(src='/assets/logo.light.png')
+                    img(src=common.logoLight)
 
             for item in comparison 
                 .comparison-column
