--- a/landing/common/base.sass
+++ b/landing/common/base.sass
@@ -83,7 +83,11 @@ section
 	transition: 0.2s background
 
 	&:hover
-		background: #FDBE1B
+		background: #ffcc4a
+
+	&:disabled
+		cursor: default
+		background: #f6bf4c
 
 .here-button.pink
 	background: #fd84e3
