--- a/landing/index.pug
+++ b/landing/index.pug
@@ -4,6 +4,13 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
+
+        link(rel='shortcut icon' href='https://static.tildacdn.com/tild6365-3063-4930-b165-613062656662/favicon_4.ico' type='image/x-icon')
+        link(rel='apple-touch-icon' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+        link(rel='apple-touch-icon' sizes='76x76' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+        link(rel='apple-touch-icon' sizes='152x152' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+        link(rel='apple-touch-startup-image' href='https://static.tildacdn.com/tild3139-6663-4364-b339-326261363738/152.png')
+
         link(href="../assets/cabinet-grotesk/index.css", rel="stylesheet")
         link(href="../assets/manrope/index.css", rel="stylesheet")
         link(href="./index.sass", rel="stylesheet")
