--- a/landing/waitlist-modal/index.sass
+++ b/landing/waitlist-modal/index.sass
@@ -1,5 +1,29 @@
+@keyframes anvil
+  0%
+    transform: scale(1) translateY(0px)
+    box-shadow: 0 0 0 rgba(241, 241, 241, 0)
+    opacity: 0
+
+  1%
+    transform: scale(0.96) translateY(10px)
+    box-shadow: 0 0 0 rgba(241, 241, 241, 0)
+    opacity: 0
+
+  100%
+    transform: scale(1) translateY(0px)
+    box-shadow: 0 0 500px rgba(241, 241, 241, 0)
+    opacity: 1
+
+@keyframes show
+    0%
+        background: rgba(0, 0, 0, 0)
+
+    100%
+        background: rgba(0, 0, 0, 0.6)
+
+
 .modal-wrap
-    background: rgba(0, 0, 0, 0.6)
+    animation: show 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards
     display: none
     align-items: center
     justify-content: center
@@ -9,18 +33,37 @@
     right: 0
     bottom: 0
     z-index: 10000
+    padding: 16px
 
     &.open
         display: flex
 
+.modal-close
+    position: absolute
+    top: 16px
+    right: 16px
+    width: 24px
+    height: 24px
+    display: flex
+    align-items: center
+    justify-content: center
+    background: transparent
+    border: none
+    cursor: pointer
+    transition: 0.2s opacity
+    &:hover
+        opacity: 0.5
+
 .modal-body
     display: flex
+    position: relative
     background: #F3EBEA
     border-radius: 16px
     flex-direction: column
     align-items: center
     padding: 32px
     width: 480px
+    animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards
 
     h2
         font-weight: 900
@@ -45,6 +88,20 @@
         box-sizing: border-box
         width: 100%
 
-    button
+    .here-button
         margin-top: 16px
         width: 100%
+
+#success-modal
+    .modal-body
+        height: 314px
+        justify-content: center
+    
+    p
+        font-weight: 600
+        font-size: 18px
+        line-height: 25px
+        text-align: center
+        color: #2C3034
+        margin-top: 32px
+
