--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -28,7 +28,7 @@ header.header
 
 .float-qr
   img(src=floatqr.qrcode)
-  p= floatqr.qrcodeLocale
+  p !{floatqr.qrcodeLocale}
 
 .scroll-up
   img(src="/assets/icons/arrow.up.svg")
