--- a/landing/section-features/index.pug
+++ b/landing/section-features/index.pug
@@ -10,7 +10,7 @@ section.features
                     span.dot .
                 ul
                     for item in feature.items
-                        li #{item}
+                        li !{item}
             
                 a(href=feature.moreLink)
                     | #{feature.moreLocale} 
