--- a/landing/section-main/index.pug
+++ b/landing/section-main/index.pug
@@ -7,7 +7,7 @@ main.main
     .main-appclip
       img(src=main.qrcode)
       img(src='/assets/icons/arrow.left.svg')
-      p= main.qrcodeLocale
+      p !{main.qrcodeLocale}
     .main-near
       img(src='/assets/Socials/near-small.svg')
       p= main.poweredbynear
