--- a/landing/section-news/index.pug
+++ b/landing/section-news/index.pug
@@ -8,6 +8,6 @@ section.news
                 h3= item.header
                 p= item.text
 
-                a(href=item.link)
+                a(href=item.url)
                     | Read more
                     img(src='/assets/icons/link-arrow.svg')
