--- a/landing/header/index.sass
+++ b/landing/header/index.sass
@@ -34,9 +34,13 @@
         &:hover
             opacity: 0.8
         
-        &:first-child 
-            color: rgba(247, 179, 2, 1)
-            border-bottom: 2px solid #F7B302
+    &-link.active
+        color: rgba(247, 179, 2, 1)
+        border-bottom: 2px solid #F7B302
+
+    &-link.active-white
+        color: #fff
+        border-bottom: 2px solid #fff
 
     &-waitlist
         cursor: pointer
