--- a/landing/section-download/index.pug
+++ b/landing/section-download/index.pug
@@ -17,6 +17,6 @@ section.download
             
         img(src=download.picture)
         .download-banner-qr
-            img(src=download.qrcode)
+            .qr-second
             img(src='/assets/icons/arrow.up.black.svg')
             p= download.scanLocale
