--- a/landing/section-main/index.pug
+++ b/landing/section-main/index.pug
@@ -5,7 +5,7 @@ main.main
       h1 !{main.title}
       
     .main-appclip
-      img(src=main.qrcode)
+      span(style="width: 220px").qrcode-main
       img(src='/assets/icons/arrow.left.svg')
       p !{main.qrcodeLocale}
     .main-near
