--- a/santa/index.pug
+++ b/santa/index.pug
@@ -26,4 +26,4 @@ html(lang="en")
         include ../landing/footer/index.pug
         include ../landing/waitlist-modal/index.pug
     
-        script(type="module", src="./index.js")
+        script(type="module", src="./index.ts")
