--- a/santa/index.sass
+++ b/santa/index.sass
@@ -215,6 +215,10 @@ footer
         border: none
         cursor: pointer
 
+        &:disabled
+            background: #CBC6C5
+            color: #6B6661
+            cursor: default
 
 .sponsors
     margin-top: 140px
