--- a/landing/header/index.pug
+++ b/landing/header/index.pug
@@ -44,7 +44,7 @@ mixin header(active, useWhite)
           | Download on App Store
 
 .float-qr
-  img(src=floatqr.qrcode)
+  .qrcode
   p !{floatqr.qrcodeLocale}
 
 .scroll-up
