--- a/santa/main.pug
+++ b/santa/main.pug
@@ -4,14 +4,14 @@
         br
         | a Christmas miracle
 
-    .statistics
-        .statistics-item 
-            p.statistics-item-header TOTAL STT Sent
-            p.statistics-item-number 234,546
+    //- .statistics
+    //-     .statistics-item 
+    //-         p.statistics-item-header TOTAL STT Sent
+    //-         p.statistics-item-number 234,546
 
-        .statistics-item 
-            p.statistics-item-header TOTAL Holders
-            p.statistics-item-number 1546
+    //-     .statistics-item 
+    //-         p.statistics-item-header TOTAL Holders
+    //-         p.statistics-item-number 1546
 
     img.santa-logo(src="/assets/santa/santa.svg")
 
@@ -33,7 +33,7 @@
 
         .gift-now-form 
             h3 Gift now!
-            input.amount-input.here-input(placeholder="Amount (NEAR)" min="0" max="100" type="number")
+            input.amount-input.here-input(placeholder="Amount (SANTA)" min="0" max="100" type="number")
             input.phone-input.here-input(placeholder="Phone number")
             button Open transaction to sign →
 
